# avdmanager_rust

./: .pre-commit-config.yaml  Cargo.toml  deny.toml
src/: avd_funcs.rs  avd_item.rs  avd_item_keys.rs  avd_list_parser.rs  const.rs  main.rs  parser_funcs.rs  sys_img_retriever.rs
ui/: appwindow.slint
