cargo-features = ["edition2021"]

[package]
name = "avdmanager_rust"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minidom = "0.15.2"
regex = "1.10.2"
slint = "1.3.0"
tokio = { version = "1", features = ["full"] }
ureq = "2.9.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }

[build-dependencies]
slint-build = "1.0"
